fixed tagline wrapping

--- a/site/content/site.less
+++ b/site/content/site.less
@@ -97,17 +97,14 @@ a.carousel-control:hover {
 .header-description {
   margin: 130px 0 80px;
   margin-top: 230px;
+  line-height: 90px;
+  font-weight: 100;
+  font-size: 93px;
+  text-align: left;
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0px 12px rgba(36, 36, 36, 0.55);
+  padding: 0px 0 40px 0;
 
-  text-align: center;
-
-  h2 {
-    font-weight: 100;
-    font-size: 93px;
-    text-align: left;
-    color: rgb(255, 255, 255);
-    text-shadow: 0 0px 12px rgba(36, 36, 36, 0.55);
-    padding: 0px 0 40px 0;
-  }
 }
 
 /* header button - call to action button */
@@ -463,12 +460,17 @@ ul.social li:nth-child(6):before {
 
 /*************************************************************
                         responsive fix
-**************************************************************/
-/* Large desktop */
+**************************************************************//*
+
+*/
+/* Large desktop *//*
+
 @media (min-width: 1200px) {
 }
 
-/* Portrait tablet to landscape and desktop */
+*/
+/* Portrait tablet to landscape and desktop *//*
+
 @media (min-width: 768px) and (max-width: 979px) {
   .header-description h2 {
     font-size: 83px;
@@ -485,7 +487,9 @@ ul.social li:nth-child(6):before {
   }
 }
 
-/* Landscape phone to portrait tablet */
+*/
+/* Landscape phone to portrait tablet *//*
+
 @media (max-width: 767px) {
   body {
     padding: 0;
@@ -518,7 +522,9 @@ ul.social li:nth-child(6):before {
     padding: 0;
   }
 
-  /* blockqoute */
+  */
+/* blockqoute *//*
+
   .testimonials {
     padding: 44px 0 60px !important;
   }
@@ -535,7 +541,9 @@ ul.social li:nth-child(6):before {
     font-size: 18px;
   }
 
-  /* contact form */
+  */
+/* contact form *//*
+
   .contact-form-inner {
     padding: 18px !important;
   }
@@ -551,7 +559,10 @@ ul.social li:nth-child(6):before {
 
 }
 
-/* Landscape phones and down */
+*/
+/* Landscape phones and down *//*
+
 @media (max-width: 480px) {
 
 }
+*/
